hal/include/HAL/Digital.h

  bool checkPWMChannel(void* digital_port_pointer);
  bool checkRelayChannel(void* digital_port_pointer);
  uint8_t remapDigitalChannel(uint32_t pin, int32_t *status);
  uint8_t unmapDigitalChannel(uint32_t pin, int32_t *status);
  
  void setPWM(void* digital_port_pointer, unsigned short value, int32_t *status);
  unsigned short getPWM(void* digital_port_pointer, int32_t *status);
  void setPWMPeriodScale(void* digital_port_pointer, uint32_t squelchMask, int32_t *status);
  void* allocatePWM(int32_t *status);
  void* allocatePWMWithModule(uint8_t module, int32_t *status);
  void freePWM(void* pwmGenerator, int32_t *status);
  void freePWMWithModule(uint8_t module, void* pwmGenerator, int32_t *status);
  void setPWMRate(double rate, int32_t *status);
  void setPWMRateWithModule(uint8_t module, double rate, int32_t *status);
  void setPWMDutyCycle(void* pwmGenerator, double dutyCycle, int32_t *status);
  void setPWMDutyCycleWithModule(uint8_t module, void* pwmGenerator, double dutyCycle, int32_t *status);
  void setPWMOutputChannel(void* pwmGenerator, uint32_t pin, int32_t *status);
  void setPWMOutputChannelWithModule(uint8_t module, void* pwmGenerator, uint32_t pin, int32_t *status);
  
  void setRelayForward(void* digital_port_pointer, bool on, int32_t *status);