wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>bool checkPWMChannel(void*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:8</i>
	 */
	public static native byte checkPWMChannel(Pointer digital_port_pointer);
	/**
	 * Original signature : <code>bool checkRelayChannel(void*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:9</i>
	 */
	public static native byte checkRelayChannel(Pointer digital_port_pointer);
	/**
	 * Original signature : <code>uint8_t remapDigitalChannel(uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:10</i><br>
	 * @deprecated use the safer methods {@link #remapDigitalChannel(int, java.nio.IntBuffer)} and {@link #remapDigitalChannel(int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte remapDigitalChannel(int pin, IntByReference status);
	/**
	 * Original signature : <code>uint8_t remapDigitalChannel(uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:10</i>
	 */
	public static native byte remapDigitalChannel(int pin, IntBuffer status);
	/**
	 * Original signature : <code>uint8_t unmapDigitalChannel(uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:11</i><br>
	 * @deprecated use the safer methods {@link #unmapDigitalChannel(int, java.nio.IntBuffer)} and {@link #unmapDigitalChannel(int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte unmapDigitalChannel(int pin, IntByReference status);
	/**
	 * Original signature : <code>uint8_t unmapDigitalChannel(uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:11</i>
	 */
	public static native byte unmapDigitalChannel(int pin, IntBuffer status);
	/**
	 * Original signature : <code>void setPWM(void*, uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:13</i><br>
	 * @deprecated use the safer methods {@link #setPWM(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setPWM(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWM(Pointer digital_port_pointer, short value, IntByReference status);
	/**
	 * Original signature : <code>void setPWM(void*, uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:13</i>
	 */
	public static native void setPWM(Pointer digital_port_pointer, short value, IntBuffer status);
	/**
	 * Original signature : <code>uint8_t getPWM(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:14</i><br>
	 * @deprecated use the safer methods {@link #getPWM(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getPWM(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getPWM(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint8_t getPWM(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:14</i>
	 */
	public static native byte getPWM(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMPeriodScale(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:15</i><br>
	 * @deprecated use the safer methods {@link #setPWMPeriodScale(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setPWMPeriodScale(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMPeriodScale(Pointer digital_port_pointer, int squelchMask, IntByReference status);
	/**
	 * Original signature : <code>void setPWMPeriodScale(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:15</i>
	 */
	public static native void setPWMPeriodScale(Pointer digital_port_pointer, int squelchMask, IntBuffer status);
	/**
	 * Original signature : <code>void* allocatePWM(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:16</i><br>
	 * @deprecated use the safer methods {@link #allocatePWM(java.nio.IntBuffer)} and {@link #allocatePWM(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer allocatePWM(IntByReference status);
	/**
	 * Original signature : <code>void* allocatePWM(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:16</i>
	 */
	public static native Pointer allocatePWM(IntBuffer status);
	/**
	 * Original signature : <code>void* allocatePWMWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:17</i><br>
	 * @deprecated use the safer methods {@link #allocatePWMWithModule(byte, java.nio.IntBuffer)} and {@link #allocatePWMWithModule(byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer allocatePWMWithModule(byte module, IntByReference status);
	/**
	 * Original signature : <code>void* allocatePWMWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:17</i>
	 */
	public static native Pointer allocatePWMWithModule(byte module, IntBuffer status);
	/**
	 * Original signature : <code>void freePWM(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:18</i><br>
	 * @deprecated use the safer methods {@link #freePWM(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #freePWM(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void freePWM(Pointer pwmGenerator, IntByReference status);
	/**
	 * Original signature : <code>void freePWM(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:18</i>
	 */
	public static native void freePWM(Pointer pwmGenerator, IntBuffer status);
	/**
	 * Original signature : <code>void freePWMWithModule(uint8_t, void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:19</i><br>
	 * @deprecated use the safer methods {@link #freePWMWithModule(byte, com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #freePWMWithModule(byte, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void freePWMWithModule(byte module, Pointer pwmGenerator, IntByReference status);
	/**
	 * Original signature : <code>void freePWMWithModule(uint8_t, void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:19</i>
	 */
	public static native void freePWMWithModule(byte module, Pointer pwmGenerator, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMRate(float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:20</i><br>
	 * @deprecated use the safer methods {@link #setPWMRate(float, java.nio.IntBuffer)} and {@link #setPWMRate(float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMRate(double rate, IntByReference status);
	/**
	 * Original signature : <code>void setPWMRate(float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:20</i>
	 */
	public static native void setPWMRate(double rate, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMRateWithModule(uint8_t, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:21</i><br>
	 * @deprecated use the safer methods {@link #setPWMRateWithModule(byte, float, java.nio.IntBuffer)} and {@link #setPWMRateWithModule(byte, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMRateWithModule(byte module, double rate, IntByReference status);
	/**
	 * Original signature : <code>void setPWMRateWithModule(uint8_t, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:21</i>
	 */
	public static native void setPWMRateWithModule(byte module, double rate, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMDutyCycle(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:22</i><br>
	 * @deprecated use the safer methods {@link #setPWMDutyCycle(com.sun.jna.Pointer, float, java.nio.IntBuffer)} and {@link #setPWMDutyCycle(com.sun.jna.Pointer, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMDutyCycle(Pointer pwmGenerator, double dutyCycle, IntByReference status);
	/**
	 * Original signature : <code>void setPWMDutyCycle(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:22</i>
	 */
	public static native void setPWMDutyCycle(Pointer pwmGenerator, double dutyCycle, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMDutyCycleWithModule(uint8_t, void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:23</i><br>
	 * @deprecated use the safer methods {@link #setPWMDutyCycleWithModule(byte, com.sun.jna.Pointer, float, java.nio.IntBuffer)} and {@link #setPWMDutyCycleWithModule(byte, com.sun.jna.Pointer, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMDutyCycleWithModule(byte module, Pointer pwmGenerator, double dutyCycle, IntByReference status);
	/**
	 * Original signature : <code>void setPWMDutyCycleWithModule(uint8_t, void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:23</i>
	 */
	public static native void setPWMDutyCycleWithModule(byte module, Pointer pwmGenerator, double dutyCycle, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMOutputChannel(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:24</i><br>
	 * @deprecated use the safer methods {@link #setPWMOutputChannel(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setPWMOutputChannel(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMOutputChannel(Pointer pwmGenerator, int pin, IntByReference status);
	/**
	 * Original signature : <code>void setPWMOutputChannel(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:24</i>
	 */
	public static native void setPWMOutputChannel(Pointer pwmGenerator, int pin, IntBuffer status);
	/**
	 * Original signature : <code>void setPWMOutputChannelWithModule(uint8_t, void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:25</i><br>
	 * @deprecated use the safer methods {@link #setPWMOutputChannelWithModule(byte, com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setPWMOutputChannelWithModule(byte, com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setPWMOutputChannelWithModule(byte module, Pointer pwmGenerator, int pin, IntByReference status);
	/**
	 * Original signature : <code>void setPWMOutputChannelWithModule(uint8_t, void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:25</i>
	 */
	public static native void setPWMOutputChannelWithModule(byte module, Pointer pwmGenerator, int pin, IntBuffer status);
	/**
	 * Original signature : <code>void setRelayForward(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:27</i><br>
	 * @deprecated use the safer methods {@link #setRelayForward(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setRelayForward(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setRelayForward(Pointer digital_port_pointer, byte on, IntByReference status);
